--- a/lovelace.yaml
+++ b/lovelace.yaml
@@ -1,25 +1,39 @@
 type: vertical-stack
 cards:
   - type: 'custom:apexcharts-card'
-    graph_span: 7d
+    graph_span: 6d
     apex_config:
       yaxis:
-        min: 1000
-        max: 1100
-        decimalsInFloat: 0
-        tickAmount: 5
+        - title:
+            text: spez. Dichte
+          min: 1000
+          max: 1100
+          decimalsInFloat: 0
+          tickAmount: 10
+        - show: false
+          min: 1000
+          max: 1100
+        - title:
+            text: 'Alkohol [%]'
+          opposite: true
+          min: 0
+          max: 10
+          decimalsInFloat: 0
+          tickAmount: 10
+        - show: false
+          min: 0
+          max: 10
       chart:
-        height: 180px
+        height: 280px
     header:
       show: true
-      title: 'iSpindel Dichte [7d]'
+      title: 'iSpindel Dichte und Alkohol [7d]'
       show_states: true
       colorize_states: true
     y_axis_precision: 0
     all_series_config:
       stroke_width: 3
       opacity: 0.9
-      float_precision: 0
       type: line
       show:
         extremas: true
@@ -30,55 +44,47 @@ cards:
       - entity: sensor.i_spindel_1_gravity
         name: iSpindel 1
         color: orange
+        float_precision: 0
       - entity: sensor.i_spindel_2_gravity
         name: iSpindel 2
         color: lightblue
-  - type: 'custom:apexcharts-card'
-    graph_span: 7d
-    apex_config:
-      yaxis:
-        min: 0
-        max: 10
-        decimalsInFloat: 0
-        tickAmount: 5
-      chart:
-        height: 180px
-    header:
-      show: true
-      title: 'iSpindel Alkohol [7d]'
-      show_states: true
-      colorize_states: true
-    y_axis_precision: 0
-    all_series_config:
-      stroke_width: 3
-      opacity: 0.9
-      float_precision: 2
-      type: line
-      show:
-        extremas: true
-      group_by:
-        func: avg
-        duration: 60min
-    series:
+        float_precision: 0
       - entity: sensor.i_spindel_1_abv
         name: iSpindel 1
-        color: lightgrey
+        color: red
+        float_precision: 1
       - entity: sensor.i_spindel_2_abv
         name: iSpindel 2
-        color: darkgrey
+        color: blue
+        float_precision: 1
   - type: 'custom:apexcharts-card'
     graph_span: 7d
     apex_config:
       yaxis:
-        min: 5
-        max: 40
-        decimalsInFloat: 0
-        tickAmount: 7
+        - title:
+            text: 'Temperatur [°C]'
+          min: 5
+          max: 40
+          decimalsInFloat: 0
+          tickAmount: 7
+        - show: false
+          min: 5
+          max: 40
+        - title:
+            text: 'Akkustand [%]'
+          opposite: true
+          min: 0
+          max: 100
+          decimalsInFloat: 0
+          tickAmount: 10
+        - show: false
+          min: 0
+          max: 100
       chart:
-        height: 180px
+        height: 280px
     header:
       show: true
-      title: 'iSpindel Temperatur [7d]'
+      title: 'iSpindel Temperatur und Akkustand [7d]'
       show_states: true
       colorize_states: true
     y_axis_precision: 0
@@ -95,8 +101,14 @@ cards:
     series:
       - entity: sensor.ispindel_1_mpu6050_temperature
         name: iSpindel 1
-        color: red
+        color: orange
       - entity: sensor.ispindel_2_mpu6050_temperature
+        name: iSpindel 2
+        color: lightblue
+      - entity: sensor.ispindel_1_battery_percentage
+        name: iSpindel 1
+        color: red
+      - entity: sensor.ispindel_2_battery_percentage
         name: iSpindel 2
         color: blue
   - type: entities
